# swagger/swagger.yml
@@ -241,6 +241,121 @@ paths:
           description: '{string} delete success!'
         "403":
           description: id is empty
+  /periodo_academico/:
+    get:
+      tags:
+      - periodo_academico
+      description: get PeriodoAcademico
+      operationId: PeriodoAcademicoController.Get All
+      parameters:
+      - in: query
+        name: query
+        description: Filter. e.g. col1:v1,col2:v2 ...
+        type: string
+      - in: query
+        name: fields
+        description: Fields returned. e.g. col1,col2 ...
+        type: string
+      - in: query
+        name: sortby
+        description: Sorted-by fields. e.g. col1,col2 ...
+        type: string
+      - in: query
+        name: order
+        description: Order corresponding to each sortby field, if single value, apply
+          to all sortby fields. e.g. desc,asc ...
+        type: string
+      - in: query
+        name: limit
+        description: Limit the size of result set. Must be an integer
+        type: string
+      - in: query
+        name: offset
+        description: Start position of result set. Must be an integer
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.PeriodoAcademico'
+        "404":
+          description: not found resource
+    post:
+      tags:
+      - periodo_academico
+      description: create PeriodoAcademico
+      operationId: PeriodoAcademicoController.Post
+      parameters:
+      - in: body
+        name: body
+        description: body for PeriodoAcademico content
+        required: true
+        schema:
+          $ref: '#/definitions/models.PeriodoAcademico'
+      responses:
+        "201":
+          description: '{int} models.PeriodoAcademico'
+        "400":
+          description: the request contains incorrect syntax
+  /periodo_academico/{id}:
+    get:
+      tags:
+      - periodo_academico
+      description: get PeriodoAcademico by id
+      operationId: PeriodoAcademicoController.Get One
+      parameters:
+      - in: path
+        name: id
+        description: The key for staticblock
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.PeriodoAcademico'
+        "404":
+          description: not found resource
+    put:
+      tags:
+      - periodo_academico
+      description: update the PeriodoAcademico
+      operationId: PeriodoAcademicoController.Put
+      parameters:
+      - in: path
+        name: id
+        description: The id you want to update
+        required: true
+        type: string
+      - in: body
+        name: body
+        description: body for PeriodoAcademico content
+        required: true
+        schema:
+          $ref: '#/definitions/models.PeriodoAcademico'
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.PeriodoAcademico'
+        "400":
+          description: the request contains incorrect syntax
+    delete:
+      tags:
+      - periodo_academico
+      description: delete the PeriodoAcademico
+      operationId: PeriodoAcademicoController.Delete
+      parameters:
+      - in: path
+        name: id
+        description: The id you want to delete
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{string} delete success!'
+        "404":
+          description: not found resource
   /tipo_dato_adicional/:
     get:
       tags:
@@ -510,6 +625,24 @@ definitions:
       NumeroOrden:
         type: number
         format: double
+  models.PeriodoAcademico:
+    title: PeriodoAcademico
+    type: object
+    properties:
+      Activo:
+        type: boolean
+      CodigoAbreviacion:
+        type: string
+      Descripcion:
+        type: string
+      Id:
+        type: integer
+        format: int64
+      Nombre:
+        type: string
+      NumeroOrden:
+        type: number
+        format: double
   models.TipoDatoAdicional:
     title: TipoDatoAdicional
     type: object
@@ -559,3 +692,6 @@ tags:
 - name: nucleo_basico_conocimiento
   description: |
     oprations for NucleoBasicoConocimiento
+- name: periodo_academico
+  description: |
+    PeriodoAcademicoController operations for PeriodoAcademico
